@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -60,7 +60,7 @@ public class StartupHelper {
         searchPaths.add(root);
 
         while (!searchPaths.isEmpty()) {
-            Path currRoot = searchPaths.remove(searchPaths.size() - 1);
+            Path currRoot = searchPaths.removeLast();
             DirectoryStream<Path> contents = Files.newDirectoryStream(currRoot);
             for (Path path : contents) {
                 paths.add(path);
